ENH: add AMR annotation tutorials with q2-rgi and q2-amrfinderplus (#19)
* 1

* work in progress

* create new structure

* added all tabulate visualisations

* make test better

* made all outputs consistant

* review chnages types and links

* review changes

* added tabulated amrfindeprlus annotations to data

* added links to the data reads and mags and contigs

* changed amgs to not parallel

--- a/docs/authors.yml
+++ b/docs/authors.yml
@@ -19,6 +19,12 @@ project:
       github: pmomocabr
       affiliations:
         - id: bokulich_lab
+    - id: vr
+      name: Vinzent Risch
+      orcid: 0009-0002-3904-9218
+      github: VinzentRisch
+      affiliations:
+        - id: bokulich_lab
   affiliations:
     - id: bokulich_lab
       name: Bokulich Lab
