--- a/docs/myst.yml
+++ b/docs/myst.yml
@@ -6,7 +6,8 @@ project:
   id: moshpit-docs
   title: MOSHPIT documentation
   # description:
-  keywords: ["MOSHPIT", "microbiome", "metagenome", "shotgun metagenomics"]
+  keywords: ["MOSHPIT", "microbiome", "metagenome", "shotgun metagenomics", 
+             "antimicrobial resistance", "AMR"]
   # github:
   references:
     q2doc-api-target: https://develop.qiime2.org/en/latest/
@@ -48,6 +49,16 @@ project:
             - file: chapters/01_tutorials/cocoa/04_functional_annotation/intro.md
               children:
                 - file: chapters/01_tutorials/cocoa/04_functional_annotation/mags.md
+        - file: chapters/01_tutorials/amr_gene_annotation/intro.md
+          children:
+            - file: chapters/01_tutorials/amr_gene_annotation/q2-rgi/intro.md
+              children:
+                - file: chapters/01_tutorials/amr_gene_annotation/q2-rgi/reads.md
+                - file: chapters/01_tutorials/amr_gene_annotation/q2-rgi/mags.md
+                - file: chapters/01_tutorials/amr_gene_annotation/q2-rgi/pathogen_of_origin_prediction.md
+            - file: chapters/01_tutorials/amr_gene_annotation/q2-amrfinderplus/intro.md
+              children:
+                - file: chapters/01_tutorials/amr_gene_annotation/q2-amrfinderplus/assembled_sequences.md
     - title: How-To Guides
       children:
         - pattern: chapters/02_howtos/*.md
